# themis-framework

./: .dockerignore  .env.docker  .env.docker.example  .env.example  .gitignore  .mcp.json  AUTONOMOUS_AGENTS_REFACTOR.md  CLAUDE.md  CODE_REVIEW_REPORT.md  DEPLOYMENT_GUIDE.md  DOCKER_README.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LOCAL_SETUP.md  Makefile  ORCHESTRATOR_ANALYSIS.md  PR_DESCRIPTION.md  QUICKSTART.md  README.md  REDEPLOY.md  REVIEW_FINDINGS.md  SECURITY.md  TEST_RESULTS.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  redeploy.sh  setup-local.sh  test_autonomous_agents.py  test_edge_cases.py  test_error_handling.py  test_integration.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
agents/: __init__.py  base.py  dda.py  dea.py  lda.py  lsa.py  tooling.py
api/: logging_config.py  main.py  middleware.py  security.py
connectors/: __init__.py  registry.py
docs/: AGENTIC_ENHANCEMENTS.md  API_REFERENCE.md  DEPLOYMENT_GUIDE.md  GOVERNANCE.md  README.md  SECURITY_GUIDE.md  SECURITY_IMPROVEMENTS.md  THEMIS_CODE_REVIEW.md
infra/: init-db.sql  prometheus.yml
orchestrator/: document_type_detector.py  main.py  models.py  policy.py  router.py  service.py  state.py  task_graph.py  tracing.py
qa/: evaluation_harness.py  test_smoke.py
tests/: conftest.py  test_agentic_enhancements.py  test_agents.py  test_criminal_defense_pack.py  test_edge_cases.py  test_error_handling.py  test_integration.py  test_llm_agents.py  test_logging.py  test_metrics.py  test_pi_demand_pack.py  test_security.py  (+1 more)
tools/: metrics.py  (+4 more)
(+76 files in other folders)
