[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "themis-framework"
version = "0.2.0"
description = "Scaffolding for a multi-agent legal reasoning framework"
readme = "README.md"
authors = [{name = "Themis Maintainers"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.24",
  "pydantic>=2.5",
  "pyyaml>=6.0",
  "sqlmodel>=0.0.16",
  "anthropic>=0.39",
  "pypdf>=4.0",
  "python-dotenv>=1.0",
  "slowapi>=0.1.9",
  "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "httpx>=0.25",
  "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "orchestrator*", "agents*", "tools*", "packs*", "qa*"]
